force-app/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__TargetField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TargetField__c</fullName>
        <description>Field on the Product Option that sources remaining metadata and holds the value.</description>
        <inlineHelpText>Specify field on Product Option that will hold this attribute&#39;s value.</inlineHelpText>
        <label>Target Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
                <value>
                    <fullName>Discount (Amt)</fullName>
                </value>
                <value>
                    <fullName>Discount (%)</fullName>
                </value>
                <value>
                    <fullName>Product_Version__c</fullName>
                </value>
                <value>
                    <fullName>Country__c</fullName>
                </value>
                <value>
                    <fullName>Services_Delivered_By__c</fullName>
                </value>
                <value>
                    <fullName>Select_Orchestrator__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>